# prolog-rs

./: .gitignore  Cargo.toml  Justfile  NOTES.md  README.md
examples/: eight_queens.pl  hello.pl  likes.pl  mortal.pl  not_or.pl  overflow.pl  whole_number.pl
examples/99-prolog-problems/: README.md  p1_lists.pl  p2_arithmetic.pl  p3_logic_and_codes.pl  p4_binary_trees.pl  p5_multiway_trees.pl  p7_miscellaneous.pl
lib/: stdlib.pl
src/: database.rs  errors.rs  flatten.rs  lib.rs  main.rs  types.rs  wam.rs
src/parser/: errors.rs  lexer.rs  mod.rs  parser.rs  reader.rs
src/solver/: byrd.rs  cmp.rs  eval.rs  math.rs  mod.rs  tests.rs  unify.rs  vars.rs
